# innovid

./: README.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/plugin/: marketplace.json
plugins/42crunch-api-security-testing/: README.md  RECIPES.md
plugins/adobe-for-creativity/: .mcp.json
plugins/ai-plugins/: .mcp.json  CHANGELOG.md  GEMINI.md  README.md  llms.txt
plugins/aikido/: .mcp.json  README.md
plugins/airwallex-agentos/: .cursor-mcp.json  .mcp.json  README.md
plugins/alloydb/: README.md
plugins/alloydb-omni/: README.md
plugins/amazon-location-service/: .mcp.json
plugins/amplitude/: .mcp.json  README.md
plugins/apollo/: .mcp.json
plugins/apollo-skills/: .mcp.json
plugins/appwrite/: .mcp.json
plugins/atlan/: .mcp.json
plugins/atlassian/: .mcp.json
plugins/atomic-agents/: .coveragerc  .gitignore  README.md  UPGRADE_DOC.md  agents.md  build_and_deploy.ps1  pyproject.toml  pytest.ini
plugins/auth0/: README.md
plugins/aws-agents-for-devsecops/: .mcp.json  (+1 more)
plugins/data-engineering/skills/migrating-dagster-to-airflow/scripts/: inventory.py  pyproject.toml
plugins/data-engineering/skills/migrating-dagster-to-airflow/scripts/tests/: test_inventory.py
plugins/teamcity-cli/evals/: .env  Dockerfile  README.md  checks.py  conftest.py  pyproject.toml  tasks.json
plugins/teamcity-cli/evals/scaffold/: claude.py  events.py  graders.py  langfuse_log.py  runner.py  sentry_log.py  tasks.py
plugins/teamcity-cli/evals/scripts/: compare.py
plugins/teamcity-cli/evals/tests/: test_checks.py  test_tasks.py
(+6341 files in other folders)
