[project]
name = "teamcity-cli-evals"
version = "0.1.0"
description = "Skill evaluation pipeline for the TeamCity CLI agent skill"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-xdist>=3.5",
    "pytest-repeat>=0.9",
    "pytest-timeout>=2.3",
    "pyyaml>=6.0",
    "sentry-sdk>=2.20",
    "langfuse>=4,<5",
]

[project.optional-dependencies]
api = ["anthropic>=0.87.0"]
dev = ["ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100
target-version = "py311"
